c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/mod_double.c
int main(void) {
    /* You can't apply the modulo operator to a double */
    double d = 10.0;
    d = d % 3;
    return 0;
}